添加搜索功能

--- a/_config.yml
+++ b/_config.yml
@@ -92,3 +92,10 @@ feed:
   path: atom.xml
   limit: 20
 plugins: hexo-generate-feed
+
+
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
