--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -1179,3 +1179,9 @@ css: css
 js: js
 images: images
 
+# Post wordcount display settings
+# Dependencies: https://github.com/willin/hexo-wordcount
+post_wordcount:
+  item_text: true
+  wordcount: true
+  min2read: true
