--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 # Site
 title: 南国薏米
-subtitle: 南国薏米
-description: 南国薏米
+subtitle: 南国不须收薏苡,百年终竟是芭蕉。
+description: A human being,who loves football and music.
 keywords: 南国薏米
-author: Chirius
+author: Chillo
 language: zh-CN
 timezone: Asia/Shanghai
 
