--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -217,6 +217,9 @@ links:
   蔚然山庄: http://zzlve.win/
   Github Pages: http://eelve.github.io/
   Gitee Pages: https://eelve.gitee.io/
+  坤坤: https://shilikun.com/
+  Binge: https://binge.eelve.com/
+  BoBo: https://bobo.eelve.com/
 
 # Sidebar Avatar
 avatar:
