--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-searchdb": "^1.0.8",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-permalink-pinyin": "^1.1.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-jade": "^0.4.1",
     "hexo-renderer-marked": "^1.0.1",
