修改项目配置

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/eelve/eelve.github.io.git
+  repo: git@github.com:eelve/eelve.github.io.git
   branch: master
 
 #设置保存CNAME的插件
