--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -444,8 +444,8 @@ codeblock:
 
 # `Follow me on GitHub` banner in the top-right corner.
 github_banner:
-  enable: false
-  permalink: https://github.com/yourname
+  enable: true
+  permalink: https://github.com/eelve
   title: Follow me on GitHub
 
 
@@ -998,7 +998,7 @@ pace:
 # JavaScript 3D library.
 # Dependencies: https://github.com/theme-next/theme-next-three
 three:
-  enable: true
+  enable: false
   delay: true # Set true to further delay loading
   three_waves: true
   canvas_lines: true
@@ -1008,7 +1008,7 @@ three:
 # Dependencies: https://github.com/theme-next/theme-next-canvas-nest
 # For more information: https://github.com/hustcc/canvas-nest.js
 canvas_nest:
-  enable: true
+  enable: false
   onmobile: true # display on mobile or not
   color: "0,0,255" # RGB values, use `,` to separate
   opacity: 0.5 # the opacity of line: 0~1
