修改计算字数插件

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -229,9 +229,9 @@ avatar:
   # You can also use other linking images.
   url: /images/virrina.jpg
   # If true, the avatar would be dispalyed in circle.
-  rounded: false
+  rounded: true
   # If true, the avatar would be rotated with the cursor.
-  rotated: false
+  rotated: true
 
 # Table Of Contents in the Sidebar
 toc:
@@ -322,7 +322,7 @@ post_meta:
 symbols_count_time:
   separated_meta: true
   item_text_post: true
-  item_text_total: false
+  item_text_total: true
   awl: 4
   wpm: 275
 
@@ -1182,10 +1182,3 @@ vendors:
 css: css
 js: js
 images: images
-
-# Post wordcount display settings
-# Dependencies: https://github.com/willin/hexo-wordcount
-post_wordcount:
-  item_text: true
-  wordcount: true
-  min2read: true
