--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hexo-generator-cname": "^0.3.0",
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index2": "^0.2.0",
+    "hexo-generator-restful": "^0.2.3",
     "hexo-generator-searchdb": "^1.3.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-permalink-pinyin": "^1.1.0",
