--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,10 @@ timezone: Asia/Shanghai
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://zzlve.win
 root: /
-permalink: :year/:month/:day/:title/
+permalink: posts/:abbrlink.html  # 此处可以自己设置，也可以直接使用 /:abbrlink  posts也可改也可以去掉
+abbrlink:
+  alg: crc32   #算法： crc16(default) and crc32
+  rep: hex     #进制： dec(default) and hex
 permalink_defaults:
 
 # Directory
@@ -102,7 +105,7 @@ search:
   limit: 10000
 
 permalink_pinyin:
-  enable: true
+  enable: false
   separator: '-' # default: '-'
 
 # index2 generator是否包含官方的hexo-generator-index，默认true（包含）
