--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bluebird": "^3.5.5",
     "hexo": "^5.3.0",
+    "hexo-abbrlink": "^2.2.1",
     "hexo-admin": "^2.3.0",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
