--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -72,13 +72,14 @@ footer:
 
   # Beian ICP and gongan information for Chinese users. See: http://www.beian.miit.gov.cn, http://www.beian.gov.cn
   beian:
-    enable: false
-    icp:
+    enable: true
+    icp: ''
     # The digit in the num of gongan beian.
-    gongan_id:
+    gongan_id: 16014637
     # The full num of gongan beian.
-    gongan_num:
+    gongan_num: 蜀ICP备16014637号-1
     # The icon for gongan beian. See: http://www.beian.gov.cn/portal/download
+    # https://image.eelve.com/beian.png
     gongan_icon_url:
 
 # Creative Commons 4.0 International License.
@@ -204,9 +205,6 @@ links_settings:
 
 links:
   南国薏米: https://eelve.com/
-  蔚然山庄: https://zzlve.win/
-  Github Pages: https://eelve.github.io/
-  Gitee Pages: https://eelve.gitee.io/
   坤坤: https://shilikun.com/
   Binge: https://binge.eelve.com/
   BoBo: https://bobo.eelve.com/
