--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hexo-abbrlink": "^2.2.1",
     "hexo-admin": "^2.3.0",
     "hexo-deployer-git": "^2.1.0",
+    "hexo-deployer-upyundeploy": "^1.0.1",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-cname": "^0.3.0",
